<resources>
    <string name="app_name">GraveApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ENIGMACAMP_IT_BOOTCAMP">ENIGMACAMP IT BOOTCAMP</string>
    <string name="Sign_In">Sign In</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Dont_Have_Account">Dont Have Account?</string>
    <string name="REGISTER">REGISTER</string>
    <string name="Address">Address</string>
    <string name="Email">Email</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Have_Account">Have Account?</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="Search">Search</string>
    <string name="Profile">Profile</string>
    <string name="Profile_Fullname">Christopher</string>
    <string name="Profile_Email">Meiszanthony@gmail.com</string>
    <string name="Profile_PhoneNumber">081234567890</string>
    <string name="Profile_Address">Blok G5 No, Jl. Mustika Kencana IV Jl. Anthea Raya Selatan No.25</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Booking_List">Booking List</string>
    <string name="Name_Grave">TPU Jeruk Purut</string>
    <string name="Town_Grave">Jakarta, Indonesia</string>
    <string name="Status">Status</string>
    <string name="Date_Reservation">Date Reservation</string>
    <string name="Status_Value">Pending</string>
    <string name="Date_Reservation_Value">32 November 2050</string>
    <string name="Date_Reservation">Date Reservation</string>
    <string name="Date_Reservation_Value">32 November 2050</string>
    <string name="Address">Address</string>
    <string name="Address_Value">Letaknya di Jakarta</string>
    <string name="Name_Grave">TPU Jeruk Purut</string>
    <string name="Town_Grave">Jakarta, Indonesia</string>
    <string name="Slots">20</string>
    <string name="Towns_Grave">Jakarta</string>
    <string name="Type_Grave">TPS</string>
    <string name="Address">Address</string>
    <string name="Address_Grave_Value">Jeruk Purut mempunyai luas 9,12 hektare (0,09 km2; 0,04 sq mi).Letaknya di Jakarta Selatan.</string>
    <string name="Booking">Booking</string>
    <string name="Name_Grave">TPU Jeruk Purut</string>
    <string name="Town_Grave">Jakarta, Indonesia</string>
    <string name="Grave">Grave</string>
    <string name="Payment_Grave">1.000.000</string>
    <string name="Notes">Notes</string>
    <string name="Transfer_Bank">Transfer Bank</string>
    <string name="Ovo">Ovo</string>
    <string name="Dana">Dana</string>
    <string name="Link_Aja">Link Aja</string>
    <string name="Nominal">Nominal</string>
    <string name="Nominal_Value">1.000.000</string>
    <string name="Payment_Summary">Payment Summary</string>
    <string name="Price">Price</string>
    <string name="Price_Value">1.000.000</string>
    <string name="Booking_Fee">Booking Fee</string>
    <string name="Total_Payment">Total Payment</string>
    <string name="Total_Payment_Value">1.500.000</string>
    <string name="Thank_You">Thank You</string>
    <string name="Back">BACK</string>
</resources>