<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/Profile"
        android:textStyle="bold"
        android:fontFamily="@font/fontpoppins"
        android:textSize="30dp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/iv_profile_photo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/ic_ellipse_19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_photo"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/Profile_Fullname"
        android:fontFamily="@font/fontpoppins"
        android:textSize="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
        android:layout_marginTop="5dp"
        android:text="@string/Profile_Email"
        android:fontFamily="@font/fontpoppins"
        android:textSize="16dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_profile_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_email"
        android:layout_marginTop="40dp"
        android:text="@string/Phone_Number"
        android:fontFamily="@font/fontpoppins"
        android:textSize="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/te_profile_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_phoneNumber"
        android:text="@string/Profile_PhoneNumber"
        android:fontFamily="@font/fontpoppins"
        android:textSize="16dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/te_profile_phoneNumber"
        android:layout_marginTop="30dp"
        android:text="@string/Address"
        android:fontFamily="@font/fontpoppins"
        android:textSize="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_profile_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_address"
        android:text="@string/Profile_Address"
        android:fontFamily="@font/fontpoppins"
        android:textSize="16dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_profile_signin"
        android:layout_width="166dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/Edit_Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_address" />



</androidx.constraintlayout.widget.ConstraintLayout>