<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailGraveFragment">

    <ImageView
        android:id="@+id/iv_detailGrave_layout_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_rectangle_75"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_detailGrave_layout_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ic_rectangle_76"/>

    <ImageView
        android:id="@+id/iv_detailGrave_rectangles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="265dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_rectangle_82"/>

    <TextView
        android:id="@+id/tv_detailGrave_nameGrave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_detailGrave_rectangles"
        android:text="@string/Name_Grave"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:fontFamily="@font/fontpoppins"
        android:textSize="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_detailGrave_townGrave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_detailGrave_nameGrave"
        android:text="@string/Town_Grave"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/fontpoppins"
        android:textSize="18dp"
        android:textColor="@color/black"/>
    
    <ImageView
        android:id="@+id/iv_detailGrave_slots"
        android:layout_width="73dp"
        android:layout_height="69dp"
        android:background="@drawable/ic_rectangle_80"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detailGrave_townGrave"
        />

    <ImageView
        android:id="@+id/iv_detailGrave_townGrave"
        android:layout_width="73dp"
        android:layout_height="69dp"
        android:background="@drawable/ic_rectangle_80"
        android:layout_marginStart="170dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detailGrave_townGrave"
        />

    <ImageView
        android:id="@+id/iv_detailGrave_typeGrave"
        android:layout_width="73dp"
        android:layout_height="69dp"
        android:background="@drawable/ic_rectangle_80"
        android:layout_marginStart="300dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detailGrave_townGrave"
        />

    <TextView
        android:id="@+id/tv_detailGrave_slots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detailGrave_slots"
        android:layout_marginStart="63dp"
        android:layout_marginTop="5dp"
        android:text="@string/Slots"
        android:fontFamily="@font/fontpoppins"
        android:textSize="16dp"
        android:textColor="@color/black"/>

    <TextView
    android:id="@+id/tv_detailGrave_townsGrave"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/iv_detailGrave_slots"
    android:layout_marginStart="178dp"
    android:layout_marginTop="5dp"
    android:text="@string/Towns_Grave"
    android:fontFamily="@font/fontpoppins"
    android:textSize="16dp"
    android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_detailGrave_typeGrave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detailGrave_slots"
        android:layout_marginStart="321dp"
        android:layout_marginTop="5dp"
        android:text="@string/Type_Grave"
        android:fontFamily="@font/fontpoppins"
        android:textSize="16dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_detailGrave_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detailGrave_slots"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/Address"
        android:textStyle="bold"
        android:fontFamily="@font/fontpoppins"
        android:textSize="25dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/te_detailGrave_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detailGrave_address"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/Address_Grave_Value"
        android:fontFamily="@font/fontpoppins"
        android:textSize="18dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_detailGrave_signin"
        android:layout_width="166dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        android:text="@string/Booking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/te_detailGrave_address" />

</androidx.constraintlayout.widget.ConstraintLayout>